<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize"
    tools:context="com.shadow.moviecatalogue.ui.main.fragment.home.tab.MovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RvMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/list_movie_item" />

        <LinearLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/RvMovie">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:indeterminateTint="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/errorNetwork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/failed"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonRetry"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/retry"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/emptyMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/ic_sad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptymessage"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
