<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/searchTab"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_dark_blue"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <SearchView
                android:id="@+id/searchBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="7"
                android:focusable="false"
                android:maxLines="1"
                android:queryBackground="@drawable/bg_white"
                android:searchIcon="@drawable/ic_search"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:backgroundTint="@android:color/white"
                android:popupBackground="@android:color/white" />

        </LinearLayout>

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RvSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/searchTab"
        tools:listitem="@layout/list_movie_item" />

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/RvSearch">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:indeterminateTint="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/errorNetwork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failed"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emptyMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_search"
            android:tint="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchmessage"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>